# MPC_wheel_legged_control

./: CMakeLists.txt  Readme.md
include/: common.hpp  mpc_solver.hpp
src/: main.cpp  mpc_solver.cpp
